Thats embarrassing "android" not "andriod"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" href="#ios">iOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#andriod">Andriod</a>
+          <a class="nav-link active" href="#android">Android</a>
         </li>
       </ul>
 
@@ -51,21 +51,21 @@
 
       <hr>
 
-      <div class="andriod-container">
-        <a name="andriod"></a>
-        <h2>On Andriod</h2>
-        <p>1: Pull this library into your Andriod application</p>
+      <div class="android-container">
+        <a name="android"></a>
+        <h2>On Android</h2>
+        <p>1: Pull this library into your Android application</p>
         <div class="form-group">
           <label>Fort Awesome Kit ID</label>
           <div class="row m-b-1">
             <div class="col-sm-6">
-              <input placeholder="xxxxxxxx" class="form-control" type="text" name="andriod_kit_id">
+              <input placeholder="xxxxxxxx" class="form-control" type="text" name="android_kit_id">
             </div>
             <div class="col-sm-2">
-              <button id="andriod-button" class="btn btn-primary">Export XML Map</button>
+              <button id="android-button" class="btn btn-primary">Export XML Map</button>
             </div>
           </div>
-          <textarea id="andriod-output" class="form-control" placeholder="Output XML..." rows="10"></textarea>
+          <textarea id="android-output" class="form-control" placeholder="Output XML..." rows="10"></textarea>
         </div>
       </div>
 
