Added example of how to get the id form the url

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <a name="ios"></a>
         <h2>On iOS</h2>
         <p>1: Pull this library into your iOS application</p>
+        <p>Go to your Fort Awesome dashboard and copy the ID from the url and paste it below. <img src="kit-id.png" class="kit-id-example"></p>
         <div class="form-group">
           <label>Fort Awesome Kit ID</label>
           <div class="row m-b-1">
@@ -42,7 +43,7 @@
               <input placeholder="xxxxxxxx" class="form-control" type="text" name="ios_kit_id">
             </div>
             <div class="col-sm-2">
-              <button id="ios-button" class="btn btn-primary">Export JSON Map</button>
+              <button id="ios-button" class="btn btn-success">Export JSON Map</button>
             </div>
           </div>
           <textarea id="ios-output" class="form-control" placeholder="Output JSON..." rows="10"></textarea>
@@ -55,6 +56,7 @@
         <a name="android"></a>
         <h2>On Android</h2>
         <p>1: Pull this library into your Android application</p>
+        <p>Go to your Fort Awesome dashboard and copy the ID from the url and paste it below. <img src="kit-id.png" class="kit-id-example"></p>
         <div class="form-group">
           <label>Fort Awesome Kit ID</label>
           <div class="row m-b-1">
@@ -62,7 +64,7 @@
               <input placeholder="xxxxxxxx" class="form-control" type="text" name="android_kit_id">
             </div>
             <div class="col-sm-2">
-              <button id="android-button" class="btn btn-primary">Export XML Map</button>
+              <button id="android-button" class="btn btn-success">Export XML Map</button>
             </div>
           </div>
           <textarea id="android-output" class="form-control" placeholder="Output XML..." rows="10"></textarea>
