Click to copy ect.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ol>
         <ol start="2">
           <li>
-          <p>Go to your Fort Awesome dashboard and copy the ID from the url and paste it below. <img src="kit-id.png" class="kit-id-example"></p>
+          <p>Go to your Fort Awesome dashboard and copy the ID from the url and paste it below. <img src="kit-id.png" class="kit-id-example"> Then click <strong>Export JSON Map</strong>, copy the JSON, paste it into a text file, and save it as <code>FONT_NAME_font_map.json</code> (or whatever you prefer). </p>
           <div class="form-group">
             <label>Fort Awesome Kit ID</label>
             <div class="row m-b-1">
@@ -66,7 +66,7 @@
             </div>
           </div>
           <textarea id="ios-output" class="form-control" placeholder="Output JSON..." rows="10"></textarea>
-          Then click <strong>Export JSON Map</strong>, copy the JSON, paste it into a text file, and save it as <code>FONT_NAME_font_map.json</code> (or whatever you prefer). Add this JSON file to your Xcode project.</li>
+          Add this JSON file to your Xcode project.</li>
         </ol>
         <ol start="3">
           <li>Add the <a href="https://github.com/PrideChung/FontAwesomeKit">FontAwesomeKit Cocoapod</a> to your project.</li>
