--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a name="web"></a>
         <h2>Web:</h2>
         <p>Head to <a href="https://fortawesome.com">fortawesome.com</a> and copy the embed code from the documentation and add it to the <code>&lt;head&gt;</code> of your html document.</p>
-        <pre><code>&lt;script src="https://use.fortawesome.com/0ee5b57e.js"&gt;&lt;/script&gt;</code></pre>
+        <pre><code class="language-markup">&lt;script src="https://use.fortawesome.com/0ee5b57e.js"&gt;&lt;/script&gt;</code></pre>
       </div>
 
       <hr>
@@ -74,7 +74,7 @@
         <ol start="2">
           <li>Subclass FAKIcon and override this method as below:</li>
         </ol>
-        <pre><code class="language-objective-c">+ (UIFont *)iconFontWithSize:(CGFloat)size
+        <pre><code class="language-objectivec">+ (UIFont *)iconFontWithSize:(CGFloat)size
 {
     static dispatch_once_t onceToken;
     dispatch_once(&amp;onceToken, ^{
@@ -89,7 +89,7 @@
         <ol start="3">
           <li>And override this method as below. This is where the magic happens. In this method, we will load up the json mapping file that we generated in step 2 to map the human-friendly identifiers (like “fa-search”) to their computer-friendly character codes (like “f028”).</li>
         </ol>
-        <pre><code class="language-objective-c">+ (NSDictionary *)allIcons
+        <pre><code class="language-objectivec">+ (NSDictionary *)allIcons
 {
     NSString *path = [[NSBundle bundleForClass:self] pathForResource:@&quot;FONT_NAME_font_map&quot; ofType:@&quot;json&quot;];
     NSData *jsonData = [NSData dataWithContentsOfFile:path];
@@ -101,7 +101,7 @@
         <ol start="4">
           <li>To use a custom Fort Awesome icon in your app, just call this method and pass in your identifier. So easy! So Magic!</li>
         </ol>
-        <pre><code class="language-objective-c">+ (instancetype)iconWithIdentifier:(NSString *)identifier size:(CGFloat)size error:(NSError **)error;
+        <pre><code class="language-objectivec">+ (instancetype)iconWithIdentifier:(NSString *)identifier size:(CGFloat)size error:(NSError **)error;
         </code></pre>
         <ol start="5">
           <li>Profit</li>
