Spacing and footer

--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
         </div>
       </div>
 
+      <hr>
+
+      <div class="m-b-3 text-xs-center">
+        Made as a fun project by <a href="https://github.com/christianhatch">Christian Hatch</a> and <a href="https://github.com/stuyam">Stuart Yamartino</a>
+      </div>
+
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
