--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
       <div class="web-container">
         <a name="web"></a>
         <h2>Web:</h2>
-        <p>Head to <a href="https://fortawesome.com">fortawesome.com</a> and copy the embed code from the documentation and add it to the <code>&lt;head&gt;</code> of your html document.</p>
+        <p>Head to <a href="https://fortawesome.com">fortawesome.com</a> and copy the embed code from the documentation and add it to the <code>&lt;head&gt;</code> of your HTML document.</p>
         <pre><code class="language-markup">&lt;script src="https://use.fortawesome.com/0ee5b57e.js"&gt;&lt;/script&gt;</code></pre>
+        <p>Using an icon in your HTML is as easy as:</p>
+        <pre><code class="language-markup">&lt;i class="icon icon-message"&gt;&lt;/i&gt;</code></pre>
       </div>
 
       <hr>
