Link to iOS and Android instructions

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </div>
           </div>
           <textarea id="ios-output" class="form-control" placeholder="Output JSON..." rows="10"></textarea>
+          <a class="mt-1 d-block" href="https://github.com/KnotLabs/fort-awesome-everywhere/blob/gh-pages/README.md#ios">What do I do next?</a>
         </div>
 
         <div class="col-md-6">
@@ -54,6 +55,7 @@
               </div>
             </div>
             <textarea id="android-output" class="form-control" placeholder="Output XML..." rows="10"></textarea>
+            <a class="mt-1 d-block" href="https://github.com/KnotLabs/fort-awesome-everywhere/blob/gh-pages/README.md#android">What do I do next?</a>
           </div>
         </div>
       </div>
