--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
       <div class="row">
         <div class="col-md-6">
           <h3>JSON Export (iOS)</h3>
-          <textarea id="ios-output" class="form-control" placeholder="Output JSON..." rows="10"></textarea>
+          <div class="textarea-wrapper">
+            <textarea id="ios-output" class="form-control" placeholder="Output JSON..." rows="10"></textarea>
+            <button class="btn btn-primary" id="download-json">Download</button>
+          </div>
           <a class="mt-1 d-block" href="https://github.com/KnotLabs/fort-awesome-everywhere/blob/gh-pages/README.md#ios">Finish iOS Setup...</a>
         </div>
 
         <div class="col-md-6">
             <h3>XML Export (Android)</h3>
-            <textarea id="android-output" class="form-control" placeholder="Output XML..." rows="10"></textarea>
+            <div class="textarea-wrapper">
+              <textarea id="android-output" class="form-control" placeholder="Output XML..." rows="10"></textarea>
+              <button class="btn btn-primary" id="download-xml">Download</button>
+            </div>
             <a class="mt-1 d-block" href="https://github.com/KnotLabs/fort-awesome-everywhere/blob/gh-pages/README.md#android">Finish Android Setup...</a>
           </div>
         </div>
@@ -59,6 +65,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
+    <script src="js/download.js"></script>
     <script src="js/script.js"></script>
 
   </body>
