now with less kit id and more drag and drop

--- a/index.html
+++ b/index.html
@@ -16,22 +16,14 @@
 
       <hr>
 
-      <div class="text-bold">
-        <p>
-          Go to your Fort Awesome dashboard and copy the ID from the url and paste it below to export a JSON or XML character mapping for all of the icons. <img src="kit-id.png" class="kit-id-example">
-          <div class="form-group">
-            <label>Fort Awesome Kit ID</label>
-            <div class="row mb-1">
-              <div class="col-sm-6">
-                <input placeholder="xxxxxxxx" class="form-control" type="text" name="kit_id">
-              </div>
-              <div class="col-sm-2">
-                <button id="export-btn" class="btn btn-success">Export</button>
-              </div>
-            </div>
-          </div>
-        </p>
-      </div>
+      <p>
+        <ol class="center">
+          <li>Download your kit from fortawesome.com.</li>
+          <li>In the downloaded folder, find the 'css/embedded-woff2.css' file.</li>
+          <li>Drag and drop the file below to export a JSON or XML character mapping for all of the icons.</li>
+        </ol>
+      </p>
+      <div id="dropzone">embedded-woff2.css</div>
 
       <hr>
 
