--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <p>
         <ol class="center">
-          <li>Download your kit from fortawesome.com.</li>
+          <li>Download your kit from <a href="https://fortawesome.com">fortawesome.com</a>.</li>
           <li>In the downloaded folder, find the 'css/embedded-woff2.css' file.</li>
           <li>Drag and drop the file below to export a JSON or XML character mapping for all of the icons.</li>
         </ol>
