render swift struct in html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
             <a class="mt-1 d-block" href="https://github.com/dockwa/fort-awesome-everywhere/blob/gh-pages/README.md#android">Finish Android Setup...</a>
           </div>
         </div>
+        <hr>
+        <div class="row mt-4">
+          <div class="col-md-8">
+            <h3>Swift Struct Export</h3>
+            <p class="text-secondary">*Optional type-safe icon names for Swift</p>
+            <div class="textarea-wrapper">
+              <pre><textarea id="ios-output-swift" class="form-control" placeholder="Output Swift Struct..." rows="10"></textarea></pre>
+              <button class="btn btn-primary" id="download-swift">Download</button>
+            </div>
+            <a class="mt-1 d-block" href="https://github.com/dockwa/fort-awesome-everywhere/blob/gh-pages/README.md#ios">Finish iOS Setup...</a>
+          </div>
+        </div>
       </div>
 
       <hr>
